<resources>
    <string name="app_name">MoodTracker</string>
    <string name="feeling">How are you feeling?</string>
    <string name="newEntry">New Entry</string>
    <string name="priv">Private Entry?</string>
    <string name="voiceAdd">Add a voice note</string>
    <string name="delete">Delete</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="menu">Menu</string>
    <string name="descWord">Descriptor Word</string>
    <string name="datetime">DateTime</string>
    <string name="content">Content Body</string>
    <string name="text_description">Description</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="app_title">Title</string>
    <string name="sunset_background_image">Sunset Background Image</string>
    <string name="microphone">Microphone</string>
    <string name="new_voice_note">New Voice Note</string>
    <string name="title_of_note">Title of Note</string>
    <string name="sad_message">You are feeling sad today.</string>
    <string name="not_good_message">You are feeling not good today.</string>
    <string name="okay_message">You are feeling okay today.</string>
    <string name="good_message">You are feeling good today.</string>
    <string name="happy_message">You are feeling happy today.</string>
    <string name="setpin">Change/Set PIN</string>
    <string name="notehis">View Note History</string>
    <string name="back">Back</string>
    <string name="cont">Continue</string>
    <string name="newpin">New Pin</string>
    <string name="currentpin">Current Pin</string>
    <string name="createtxt">To create a pin, enter the pin in the "new pin" box below. This will delete any existing private notes made with other pins.</string>
    <string name="changetxt">To change your pin, enter the previous pin in the "previous pin" box, and in the "new pin" box below. This will change the pin and preserve existing private notes.</string>
</resources>
