<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/feeling"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar4" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar4">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_rate1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/ratingOne"
                android:textSize="18sp"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/btn_rate2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:backgroundTint="@color/ratingTwo"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn_rate3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:backgroundTint="@color/ratingThree"
                android:text="@string/three" />

            <Button
                android:id="@+id/btn_rate4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:backgroundTint="@color/ratingFour"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn_rate5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:backgroundTint="@color/ratingFive"
                android:text="@string/five" />
        </LinearLayout>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/et_date"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <CheckBox
        android:id="@+id/cb_privateEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:text="@string/priv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_date"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <EditText
        android:id="@+id/et_noteDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/text_description"
        android:inputType="textMultiLine"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_date" />

    <EditText
        android:id="@+id/et_Name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_noteDescription" />

    <Button
        android:id="@+id/btn_voiceNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/ratingThree"
        android:text="@string/voiceAdd"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Name"
        android:onClick="recordVoiceNote"/>

    <Button
        android:id="@+id/btn_saveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/save_button"
        android:text="@string/save"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_discardNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/lightGrey"
        android:text="@string/discard"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="mainActivity"/>

</androidx.constraintlayout.widget.ConstraintLayout>