<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNote_Activity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_feeling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/feeling"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar4" />

    <LinearLayout
        android:id="@+id/QuickLaunchButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_feeling">

        <Button
            android:id="@+id/btn_one"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/level1frog"
            android:foreground="@drawable/level1frog"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/level2frog"
            android:foreground="@drawable/level2frog"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/level3frog"
            android:foreground="@drawable/level3frog"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_four"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/level4frog"
            android:foreground="@drawable/level4frog"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/level5frog"
            android:foreground="@drawable/level5frog"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_noteDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QuickLaunchButtons">

        <CheckBox
            android:id="@+id/cb_privateEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/priv" />

        <Button
            android:id="@+id/pickDate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date"
            android:text="Pick date"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/DateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_Title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/title_of_note"
            android:inputType="text"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_noteDescription"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/text_description"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_voiceNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/voiceNote"
        android:onClick="recordVoiceNote"
        android:text="@string/voiceAdd"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_noteDetails" />

<!--    <Button-->
<!--        android:id="@+id/btn_viewVoiceNote"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:backgroundTint="@color/voiceNote"-->
<!--        android:onClick="viewVoiceNote"-->
<!--        android:text="View Voice Note"-->
<!--        android:textSize="16sp"-->
<!--        app:cornerRadius="0dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/btn_voiceNote" />-->

    <Button
        android:id="@+id/btn_viewMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/voiceNote"
        android:text="View Map"
        android:textSize="16sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_saveNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_noteDetails" />

    <Button
        android:id="@+id/btn_saveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/save_button"
        android:onClick="savePressed"
        android:text="@string/save"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_discardNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/lightGrey"
        android:onClick="mainActivity"
        android:text="Back"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_newEntryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Entry"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_colour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints=""
        android:inputType="text"
        android:text="white"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_voiceNote" />

    <TextView
        android:id="@+id/emotionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="neutral"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>