<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".VoiceNoteActivity">

    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ratingTwo"
        android:fontFamily="sans-serif-medium"
        android:text="@string/new_voice_note"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Title" />

    <Button
        android:id="@+id/btn_record"
        android:layout_width="85sp"
        android:layout_height="85sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/microphone_icon"
        android:onClick="btnPressRecord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="85sp"
        android:layout_height="85sp"
        android:layout_marginStart="40dp"
        android:background="@drawable/stop_recording"
        android:onClick="btnPressStop"
        app:layout_constraintStart_toEndOf="@+id/btn_record"
        app:layout_constraintTop_toTopOf="@+id/btn_record" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/play_button"
        android:onClick="btnPressPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/btn_stop"
        app:layout_constraintTop_toTopOf="@+id/btn_stop" />

    <Button
        android:id="@+id/btn_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightGrey"
        android:onClick="discardVoiceNote"
        android:text="@string/discard"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/btn_saveVoiceNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#458523"
        android:text="@string/save"
        android:textSize="18sp"
        app:cornerRadius="0dp"
        android:onClick="saveVoiceNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_discard"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_recordbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="Record"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_record" />

    <TextView
        android:id="@+id/tv_stopbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="Stop Recording"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_recordbtn"
        app:layout_constraintTop_toBottomOf="@+id/btn_stop" />

    <TextView
        android:id="@+id/tv_playbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Play Recording"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toEndOf="@+id/tv_stopbtn"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />


</androidx.constraintlayout.widget.ConstraintLayout>


